Add .gitattributes to specify Java language

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,6 @@
 # Auto detect text files and perform LF normalization
 * text=auto
+# *.java linguist-language=Java
+# *.xml linguist-language=XML
+# *.gradle linguist-language=Groovy
+# pom.xml linguist-language=XML
